--- a/pom.xml
+++ b/pom.xml
@@ -56,7 +56,17 @@
             <version>3.12</version>
         </dependency>
         <!-- poi相关end -->
-
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.7</version>
+        </dependency>
+        <!--<dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>5.1.9.RELEASE</version>
+            <scope>test</scope>
+        </dependency>-->
     </dependencies>
 
     <build>
